--- a/PokemonMastersGuildSite/packages.config
+++ b/PokemonMastersGuildSite/packages.config
@@ -40,6 +40,8 @@
   <package id="MsieJavaScriptEngine" version="1.4.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net451" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
   <package id="Twitter.Bootstrap.Less" version="3.1.1" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
