Tooltips are fucked for some reason, going with opentip but that didn't work either. No fucking clue yet.

--- a/PokemonMastersGuildSite/PokemonMastersGuildSite.csproj
+++ b/PokemonMastersGuildSite/PokemonMastersGuildSite.csproj
@@ -266,6 +266,7 @@
     <Content Include="Content\PagedList.css" />
     <Content Include="CSS\guildroster.css" />
     <Content Include="CSS\news.css" />
+    <Content Include="CSS\opentip.css" />
     <Content Include="CSS\select2.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -347,6 +348,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\Knockout-3.2.0.js" />
     <Content Include="Scripts\modernizr-2.7.1.js" />
+    <Content Include="Scripts\opentip.min.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
@@ -354,9 +356,9 @@
     <Content Include="Scripts\select2.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Scripts\GuildRoster.js" />
-    <Content Include="Static\PlayerDetails.html" />
     <Content Include="Scripts\PlayerDetails.js" />
     <Content Include="ViewModels\GuildRosterModel.js" />
+    <Content Include="ViewModels\GuildRosterPlayerModel.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -396,7 +398,9 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Static\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
